Fix davfs entries being omitted from fstab file.

BUG: 447961